--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     ]
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.62.8",
     "@vanilla-extract/css": "^1.16.1",
+    "axios": "^1.7.9",
     "next": "15.1.1",
     "react": "18",
     "react-dom": "18"
