--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "axios": "^1.7.9",
     "next": "15.1.1",
     "react": "18",
-    "react-dom": "18"
+    "react-dom": "18",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
