--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.62.8",
+    "@uidotdev/usehooks": "^2.4.1",
     "@vanilla-extract/css": "^1.16.1",
     "axios": "^1.7.9",
     "next": "15.1.1",
