--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vanilla-extract/next-plugin": "^2.4.7",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.1",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.1",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-define-config": "^2.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.11",
