--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vanilla-extract/next-plugin": "^2.4.7",
-    "eslint": "^9.17.0",
+    "eslint": "8",
     "eslint-config-next": "^15.1.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-define-config": "^2.1.0",
