--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query": "^5.62.8",
     "@uidotdev/usehooks": "^2.4.1",
     "@vanilla-extract/css": "^1.16.1",
+    "@vanilla-extract/dynamic": "^2.1.2",
     "axios": "^1.7.9",
     "next": "15.1.1",
     "react": "18",
