--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@vanilla-extract/css": "^1.16.1",
     "@vanilla-extract/dynamic": "^2.1.2",
     "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.3",
     "next": "15.1.1",
     "react": "18",
     "react-dom": "18",
@@ -34,6 +37,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
