--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "@vanilla-extract/css": "^1.16.1",
     "@vanilla-extract/dynamic": "^2.1.2",
+    "@vanilla-extract/recipes": "^0.5.5",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
