--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
-    "next": "15.1.1",
+    "next": "14.1.1",
     "react": "18",
     "react-dom": "18",
+    "recoil": "^0.7.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
